fix: tighten decklist spacing

--- a/src/components/decklist/decklist-groups.module.css
+++ b/src/components/decklist/decklist-groups.module.css
@@ -9,7 +9,7 @@
 .group-title {
   display: block;
   font-size: var(--text-xs);
-  padding: 0.25rem 0.5rem;
+  padding: 0.25rem 0;
   border-bottom: 1px solid var(--nord-point-five);
 }
 
@@ -17,9 +17,9 @@
   display: grid;
   grid-template-areas: "asset" "rest";
   grid-template-columns: 1fr;
-  gap: 0.5rem;
+  gap: 0.25rem;
 
-  @container (min-width: 34rem) {
+  @container (min-width: 36rem) {
     grid-template-areas: "asset rest";
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
@@ -36,12 +36,13 @@
 
 .group-entry_nested-title {
   font-size: var(--text-2xs);
-  padding: 0.25rem 0.5rem 0;
+  padding-top: 0.25rem;
   display: flex;
   align-items: center;
-  gap: 0.375rem;
+  gap: 0.25rem;
   font-family: var(--font-family-ui);
   color: var(--nord-4);
+  font-weight: 400;
 }
 
 .group-children {
