--- a/src/components/list-card/list-card.module.css
+++ b/src/components/list-card/list-card.module.css
@@ -1,15 +1,15 @@
 .listcard {
   --card-padding-y: 0.5rem;
-  --card-image-height: 2.125rem;
+  --card-image-height: 2rem;
 
   align-items: center;
   display: flex;
   flex-flow: row nowrap;
-  gap: 0.375rem;
+  gap: 0.25rem;
   list-style: none;
   min-height: calc(var(--card-image-height) + 2 * var(--card-padding-y));
   padding-bottom: var(--card-padding-y);
-  padding-inline: 0.375rem;
+  padding-inline: 0;
   padding-top: var(--card-padding-y);
 
   &.borders {
@@ -40,7 +40,7 @@
 .name-container {
   display: flex;
   align-items: center;
-  gap: 0.375rem;
+  gap: 0.25rem;
 }
 
 .name {
@@ -132,7 +132,7 @@
  */
 
 .listcard.sm {
-  --card-padding-y: 0.375rem;
+  --card-padding-y: 0.25rem;
   padding-inline: none;
 }
 
@@ -151,4 +151,6 @@
 .listcard.investigator {
   --card-padding-y: 0.375rem;
   --card-image-height: 2.5rem;
+
+  padding-inline: 0.25rem;
 }
